tests/ui/traits/const-traits/issue-102156.stderr
error[E0432]: unresolved import `core`
  --> $DIR/issue-102156.rs:5:5
   |
LL | use core::convert::{From, TryFrom};
   |     ^^^^ you might be missing crate `core`
   |
help: try using `std` instead of `core`
   |
LL - use core::convert::{From, TryFrom};
LL + use std::convert::{From, TryFrom};
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
